// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-hubspot-cloud destination: sendCustomBehavioralEvent action - all fields 1`] = `[PayloadValidationError: EventName should begin with peNTxWtuPi(z!bOHmgT^*3_]`;

exports[`Testing snapshot for actions-hubspot-cloud destination: sendCustomBehavioralEvent action - required fields 1`] = `[PayloadValidationError: One of the following parameters: email, user token, or objectId is required]`;

exports[`Testing snapshot for actions-hubspot-cloud destination: sendCustomBehavioralEvent action - required fields 1`] = `[PayloadValidationError: EventName should begin with peNTxWtuPi(z!bOHmgT^*3_]`;

exports[`Testing snapshot for actions-hubspot-cloud destination: upsertCompany action - all fields 1`] = `
Object {
  "properties": Object {
    "address": "xz1CFcz1FfyLPZgppeg",
    "city": "xz1CFcz1FfyLPZgppeg",
    "description": "xz1CFcz1FfyLPZgppeg",
    "domain": "xz1CFcz1FfyLPZgppeg",
    "industry": "xz1CFcz1FfyLPZgppeg",
    "lifecyclestage": "xz1cfcz1ffylpzgppeg",
    "name": "xz1CFcz1FfyLPZgppeg",
    "numberofemployees": 6931055592341504,
    "phone": "xz1CFcz1FfyLPZgppeg",
    "segment_group_id": "xz1CFcz1FfyLPZgppeg",
    "state": "xz1CFcz1FfyLPZgppeg",
    "testType": "xz1CFcz1FfyLPZgppeg",
    "zip": "xz1CFcz1FfyLPZgppeg",
  },
}
`;

exports[`Testing snapshot for actions-hubspot-cloud destination: upsertCompany action - required fields 1`] = `
Object {
  "properties": Object {
    "segment_group_id": "xz1CFcz1FfyLPZgppeg",
  },
}
`;

exports[`Testing snapshot for actions-hubspot-cloud destination: upsertContact action - all fields 1`] = `
Object {
  "properties": Object {
    "address": "fL&&$lZA!6gsh",
    "city": "fL&&$lZA!6gsh",
    "company": "fL&&$lZA!6gsh",
    "country": "fL&&$lZA!6gsh",
    "email": "zejkulcih@ras.sh",
    "firstname": "fL&&$lZA!6gsh",
    "lastname": "fL&&$lZA!6gsh",
    "lifecyclestage": "fl&&$lza!6gsh",
    "phone": "fL&&$lZA!6gsh",
    "state": "fL&&$lZA!6gsh",
    "testType": "fL&&$lZA!6gsh",
    "website": "fL&&$lZA!6gsh",
    "zip": "fL&&$lZA!6gsh",
  },
}
`;

exports[`Testing snapshot for actions-hubspot-cloud destination: upsertContact action - required fields 1`] = `
Object {
  "properties": Object {
    "email": "zejkulcih@ras.sh",
  },
}
`;

exports[`Testing snapshot for actions-hubspot-cloud destination: upsertCustomObjectRecord action - all fields 1`] = `
Object {
  "filterGroups": Array [
    Object {
      "filters": Array [
        Object {
          "operator": "EQ",
          "propertyName": "testType",
          "value": "jf(2@y*W9WT2r)SLk(*",
        },
      ],
    },
  ],
  "properties": Array [],
  "sorts": Array [],
}
`;

exports[`Testing snapshot for actions-hubspot-cloud destination: upsertCustomObjectRecord action - required fields 1`] = `
Object {
  "associations": Array [],
  "properties": Object {
    "testType": "jf(2@y*W9WT2r)SLk(*",
  },
}
`;
